# cpprest-http-client-sdk

./: .gitmodules  CMakeLists.txt  README.md
cmake/: cpprest_clientConfig.cmake.in
example/: main.cpp  main_co.cpp
include/cpprest-client/: BasicAuth.h  BearerAuth.h  Config.h  DigestAuth.h  Exceptions.h  HttpClientCo.h  HttpClientImpl.h  HttpClientLogger.h  IAuthenticationStrategy.h  IHttpClient.h  OAuth2Auth.h
src/: DigestAuth.cpp  HttpClientCo.cpp  HttpClientImpl.cpp
test/: HttpClientTests.cpp
